# acpp11-cache-502_exercises

./: README.md
.github/workflows/: build-host.yaml
solutions/01-user-defined-types/src/: Alarm.cpp  Alarm.h  main.cpp
solutions/01-user-defined-types/tests/: CMakeLists.txt  alarm_tests.cpp
solutions/02-functions-constants/src/: Alarm.cpp  Alarm.h  main.cpp
solutions/03-circular-buffer/src/: Alarm.cpp  Buffer.cpp  Buffer.h  main.cpp
solutions/04-algorithms/src/: Alarm.cpp  Alarm.h  main.cpp
solutions/05-composite-objects/src/: Buffer.cpp  Buffer.h  Pipe.h  main.cpp
solutions/06-connecting-objects/src/: Alarm.cpp  AlarmFilter.h  Buffer.h  Display.h  Generator.cpp  Generator.h  Pipe.cpp  main.cpp
solutions/06-connecting-objects/tests/: Alarm_tests.cpp  CMakeLists.txt  Pipe_tests.cpp
solutions/07-interfaces/src/: AlarmFilter.cpp  Buffer.cpp  Buffer.h  Display.cpp  Generator.cpp  Pipe.cpp  Pipe.h  main.cpp
solutions/08-move-semantics/src/: Alarm.cpp  Alarm.h  AlarmFilter.cpp  Buffer.cpp  Buffer.h  Generator.cpp  Pipe.cpp  Pipeline.cpp  main.cpp
solutions/08-resource-management/src/: Alarm.cpp  Alarm.h  Display.cpp  Filter.h  Generator.cpp  Pipe.cpp
solutions/09-move-semantics/src/: Alarm.cpp  Alarm.h  Buffer.cpp  Pipe.h  Pipeline.h
solutions/09-smart-pointers/src/: Alarm.cpp  Alarm.h  AlarmFilter.cpp  Buffer.cpp  Buffer.h  Pipe.cpp  main.cpp
solutions/10-smart-pointers/: Buffer.h  Generator.cpp  main.cpp
solutions/10-strings/src/: Alarm.cpp  Buffer.h  Generator.cpp  Pipe.cpp
solutions/10-templates/src/: AlarmFilter.h  Buffer.h  Generator.cpp  Pipe.h  main.cpp
solutions/11-perfect-forwarding/src/: AlarmFilter.cpp  Buffer.h  Display.cpp  (+4 more)
(+33 files in other folders)
